[package]
name = "shellfs"
version = "0.1.0"
authors = ["Simon Persson <simon@flaskpost.me>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
fuse = { git = "https://github.com/zargony/fuse-rs.git" }
libc = "0.2"
env_logger = "0.6.0"
log = "*"
clap = "3.0.0-beta.2"
daemonize-me = "0.3"
